--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         
     }
     dependencies {
+
+        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.9.+'
+
         classpath 'com.android.tools.build:gradle:3.5.3'
         
         // NOTE: Do not place your application dependencies here; they belong
