lab partially complete, still need to have user add file but S3 is working correctly with amplify

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     //aws dependencies
     implementation 'com.amazonaws:aws-android-sdk-core:2.15.+'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.15.+'
     //AppSync SDK
     implementation 'com.amazonaws:aws-android-sdk-mobile-client:2.15.+'
 
