--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -51,4 +52,19 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.2.0-beta01'
+
+
+
+        // Overrides an auth dependency to ensure correct behavior
+        implementation 'com.google.android.gms:play-services-auth:15.0.1'
+
+        implementation 'com.google.firebase:firebase-core:16.0.1'
+        implementation 'com.google.firebase:firebase-messaging:17.3.0'
+
+        implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.15.+'
+
+
+
+
+
 }
