--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
 
         classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.9.+'
+        classpath 'com.google.gms:google-services:4.3.3'
 
         classpath 'com.android.tools.build:gradle:3.5.3'
         
