intent filter lab complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,15 @@
         <activity android:name=".Settings"></activity>
         <activity android:name=".TaskDetail" />
         <activity android:name=".AllTasks" />
-        <activity android:name=".AddTasks" />
+        <activity android:name=".AddTasks" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+                <data android:mimeType="image/*"/>
+            </intent-filter>
+
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
